# K22F_firmTemplate

./: ARCHITECTURE.md  README.md
firmware/app/: CMakeLists.txt
firmware/app/src/: main.cpp
firmware/drivers/: CMakeLists.txt
firmware/platform/: CMakeLists.txt
firmware/platform/mk22fn512/: CMakeLists.txt
firmware/platform/mk22fn512/cmsis/device/inc/: irq_handlers_MK22FN512.hpp
firmware/platform/mk22fn512/cmsis/device/src/: system_MK22F51212.c
firmware/platform/mk22fn512/linker/: linkerscript.ld
firmware/platform/mk22fn512/platform_drivers/clock/: clock.cpp
firmware/platform/mk22fn512/startup/: flash_config.cpp  startup_MK22FN512.cpp
scripts/: build.sh
